--- a/src/shared/ui/TokenInfo/styles.module.scss
+++ b/src/shared/ui/TokenInfo/styles.module.scss
@@ -1,16 +1,33 @@
 .tokenInfo {
     display: flex;
+    align-items: center;
     flex-direction: row;
-    gap: 10px;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 5px;
     max-width: 330px;
     width: 100%;
+    border-radius: 0;
     border-bottom: 1px solid rgb(73, 68, 68);
+    cursor: pointer;
 
     & > * {
-        max-width: 50px;
-        width: 100%;
+        text-align: left;
+    }
+
+    & > *:nth-child(1) {
+        width: 60px;
+    }
+    & > *:nth-child(2) {
+        width: 70px;
+    }
+    & > *:nth-child(3) {
+        width: 70px;
+    }
+    & > *:nth-child(4) {
+        width: 70px;
+    }
+    & > *:nth-child(5) {
+        width: 20px;
     }
 }
